# manor-py

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml
manor/: __init__.py  __version__.py
tests/: test_count.py  test_daemon.py  test_manor.py
